# python_template

./: .aiexclude  .aiignore  .gitignore  Gemini.txt  INSTALL.txt  LICENSE  README-Python-Learn.md  README.md  README.rst  pyproject.toml  requirements-conda.txt  requirements.txt  requirements_uv-pip-freeze.txt  run_pyinstaller.bat  setup.py
.gemini/: Gemini.txt  gemini_notes.txt  settings.json
.github/: copilot-instructions.md
.run/: main.run.xml
Notebooks/: 00_Jupyter.ipynb  01_ALL_Templates.ipynb  01_DataScience.ipynb  05_Stremlit.ipynb  06_HPC.ipynb  09_CAS.ipynb  0_docs.ipynb  10_ML.ipynb  11_ML.ipynb  19_HPC.ipynb  1_demo.ipynb  20_DL.ipynb  22_LLM.ipynb  23_Finetuning.ipynb  30_AI.ipynb  31_RAG.ipynb  35_GoogleAI.ipynb  40_Agents.ipynb  51_Diffusion.ipynb  70_CV.ipynb  80_PhysicalAI.ipynb  81_Genesis.ipynb  90_Creative_Coding.ipynb  Julia_template.ipynb  Jupyter.ipynb  Python_libraries_snippets.ipynb  Python_template.ipynb  R_template.ipynb  template.ipynb
_new/: TODO.txt
app2/: Using PyInstaller.url  app.py  pyinstaller.txt  run_pyinstaller.bat
docs/: INSTALL.txt  Jetbrains_PyCharm.md  Markdown.md  Microsoft_VScode.md  Python_Music.md  README.md  README.rst  TODO.md  _fileheaders.txt  conda_vs_pip.txt  condaenv.txt  deployment_pyinstaller_buildozer.txt  notes.txt  roadmap.txt  uv.md  uv_pip_list.txt  venv.md
docs/AI/: LEARN.md  Libraries.md  Pricing.md  Pytorch.md
docs/AI/MCP/: README.md
docs/Blender_Python_API/: README.md
docs/Deployment/: conda.md  pip.md
docs/Deployment/Requirements/: requirements-pip.txt
docs/Embedded_Systems/: Augmented_Reality.md
docs/Embedded_Systems/MCU/: CircuitPython.md  MicroPython.md
docs/Embedded_Systems/RaspberryPi/: Adafruit_PiGRRL-0.md  HARDWARE.md  Linux.md  PiBoy_DMG.md  PiTFT.md  Pi_Camera.md  Python.md  WiringPi.md  _README_RaspberryPi.md
docs/Embedded_Systems/Robotics/: Adafruit_IO.md  Android_Sensors.md  RC.md  _README_Robotics.md
docs/MCP/: README.md
docs/RaspberryPi/: Adafruit_PiGRRL-0.md  Adafruit_PiGRRL-0.txt  Administration.txt  HARDWARE.md  Linux.md  MediaCenter.md  MediaCenter.txt  PiBoy_DMG.md  PiBoy_DMG.txt  PiTFT.md  PiTFT.txt  Pi_Camera.md  Pi_Camera.txt  Python.md  Python.txt  README.md  Raspberry_Pi_Hardware.md  WiringPi.md  WiringPi.txt
docs/Robotics/: Augmented_Reality.md  Mecanum.md  README.md  ROS2.md
docs/Tools/: bash.txt  cmake.txt  docker.txt  git.txt  network.txt  package_managers.md  wsl.txt
docs/Tools/build_tools/: CMakeLists.txt  _README.md  cmake.txt  gradle.txt  make.txt  maven.txt  toolchains.md
docs/Tools/software_engineering/: _README.md  agile.txt  ci_cd.txt  devops.txt
docs/Web/: FastAPI.md  Frameworks.md
docs/Web/Flask/: README.md
examples/_my/: dkit.py  gamewii.py
examples/flask/htdocs/: __init__.py  forms.py  models.py  routes.py
examples/flask/htdocs/templates/: index.html  login.html  signup.html
flask/htdocs/: index.html  main.py  routes.py
flask/htdocs/templates/: layout.html
notes/: how-to-git.log.txt  make_exe.bat  notes.txt
res/img/: Thumbs.db
scripts/deploy/: CMakeLists.txt  Makefile  installer.cfg  run_py2exe.bat  run_pynsist.bat
src/: __init__.py  app.py  main.py
src/ai/: gemini_api.py  langchain.py  langchain_hf.py  openai.py  pytorch.py
src/bl_extension/: __init__.py  build.bat
src/bl_extension/addon/: __init__.py  template-blender-addon-old.py
src/bl_extension/addon/ops/: __init__.py  hello_operator.py
src/bl_extension/addon/ui/: __init__.py  hello_panel.py
src/bl_extension/addon/utils/: __init__.py
src/hpc/: hpc.py
src/snippets/ai/: ai.py  ar_mr_vr.py  fine_tuning.py  langchain.py  ml.py  physical.py
src/snippets/ai/tuts/: gemini_api.py  hf.py  mcp_server.py  ollama_sdk.py  pytorch.py
src/snippets/hpc/: fibonacci.py  hpc.py
src/snippets/robotics/: mecanum_microbit.py
src/snippets/robotics/mechanum/: mecanum_microbit_makecode.py
src/snippets/web/: streamlit.py
src/template/: main.py
srv/: _flask.txt
srv/examples/learning_flask/: forms.py  routes.py
srv/flask/examples/learning_flask/: models.py
srv/flask/examples/learning_flask/templates/: home.html
srv/flask/examples/rapid_flask_[video]/: main.py
tests/: test_gui.py
